--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.url=jdbc:mysql://containers-us-west-28.railway.app:6894/railwa
 spring.datasource.username=root
 spring.datasource.password=${DATASOURCE_PASSWORD}
 
-# spring.datasource.url=jdbc:mysql://localhost:3306/rsvpdb
-# spring.datasource.username=rsvp
-# spring.datasource.password=Password@123456
+# spring.datasource.url=jdbc:mysql://localhost:3306/kwikmart
+# spring.datasource.username=root
+# spring.datasource.password=${DATASOURCE_PASSWORD}
